--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-### Python template
+### Python template here
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -138,3 +138,4 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# you can add more here after forking this repo @GaganHonor
